# folia

./: CHANGELOG.md  README.md  app.py  app.spec  pyproject.toml
.github/workflows/: ci.yml
src/services/: file_service.py
src/ui/: interface_app.py
src/ui/components/: font_config_form.py
src/ui/views/: font_config_view.py  main_view.py
src/utils/: tkinter_exception_hook.py
tests/test_configs/: test_default_config.py  test_development_config.py  test_logger_config.py  test_production_config.py  test_testing_config.py
tests/test_constants/: test_messages.py  test_paths.py
tests/test_services/: test_file_service.py
tests/test_ui/: test_interface_app.py  test_styles.py
tests/test_ui/test_components/: test_font_config_form.py
tests/test_ui/test_views/: test_font_config_view.py  test_main_view.py
tests/test_utils/: test_dialogs.py  test_error_handler.py  test_helpers.py  test_tkinter_exception_hook.py
